vamos que vamos

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,44 +1,81 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/templates/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Previsão do Tempo</title>
-</head>
-<body>
-        <div class="conteiner">
-            <div class="conteudo"><h1>Previsão do Tempo!</h1>
-                <form action="/processar_dados" method="POST">
-                    <label for="cidade">Digite sua cidade:</label>
-                    <input type="text" name="cidade" id="cidade">
-                    <input type="submit" value="Buscar">
-                </form>
-                <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-                <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-                <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-
-
+  </head>
+  <body>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
+    />
     <script>
-        $(function() {
-            $("#cidade").autocomplete({
-                source: function(request, response) {
-                    $.get("/autocomplete", { term: request.term }, function(data) {
-                        response(data);
-                    });
-                },
-                minLength: 2
+      $(function () {
+        $("#cidade").autocomplete({
+          source: function (request, response) {
+            $.get("/autocomplete", { term: request.term }, function (data) {
+              response(data);
             });
+          },
+          minLength: 2,
         });
+      });
     </script>
+    <div class="conteiner">
+      <div class="conteudo">
+        <h1 class="titulo">Previsão do Tempo!</h1>
+        <form action="/processar_dados" method="POST">
+          <label class="city" for="cidade">Digite sua cidade:</label>
+          <input
+            type="text"
+            name="cidade"
+            id="cidade"
+            placeholder="São Paulo"
+          />
+          <input class="btn" type="submit" value="Buscar" />
+        </form>
+      </div>
+      <div class="resultados">
+        <h2 class="th2">O Clima na cidade: {{ cidade }}</h2>
+        <div id="icone-div">
+          <img id="icone" src="{{ url_for('static', filename='icons') }}/{{ icone }}.png" alt="Ícone do Tempo">
+      </div>
+      
+      <p id="descricao-icone"></p>
+  
+      <script>
+          var valorRecebido = "{{ icone }}";
+          var iconMap = {
+              clear: { nome: "ensolarado.png", descricao: "Céu Ensolarado" },
+              clouds: { nome: "nublado.png", descricao: "Céu Nublado" },
+              rain: { nome: "chuvoso.png", descricao: "Chuva" },
+              snow: { nome: "neve.png", descricao: "Neve" },
+              mist: { nome: "nevoa.png", descricao: "Nevoeiro" },
+              fog: { nome: "nevoa.png", descricao: "Nevoeiro" },
+              thunderstorm: { nome: "tempestade.png", descricao: "Tempestade" }
+          };
+  
+          var iconeElement = document.getElementById('icone');
+          iconeElement.src = "{{ url_for('static', filename='icons') }}/" + iconMap[valorRecebido].nome;
+  
+          var descricaoElement = document.getElementById('descricao-icone');
+          descricaoElement.textContent = "Descrição: " + iconMap[valorRecebido].descricao;
+      </script>
+          <p>O tempo está: {{ descricao }}</p>
+          <p>Temperatura: {{ temperatura_int }}ºC</p>
+          <p>Umidade: {{ umidade }}%</p>
         </div>
-           <div class="informacoes">
-            <p>O Clima na cidade: {{ cidade }}</p>
-            <p>{{ descricao }}</p>
-            <p>{{ temperatura_int }}ºC</p>
-            <p>{{ umidade }}%</p>
-           </div>
-        </div>
-
-</body>
+      </div>
+    </div>
+  </body>
 </html>
